# kcp_work

./: .gitignore  C1.R  C1.csv  C3.csv  CMakeLists.txt  CX-BB.csv  Lab.org  README.md  bb.sh  compare.R  ilp2.py  ilp2_C1.csv  lp1_C1.csv  lp2.csv  lp2.py  lp2_C1.csv  main_fails.ampl  main_solves_test_fails.ampl  main_suboptimal.ampl  model.cpp  out.ampl  search.sh  setup.sh  test.R
bounds/: Makefile  data.csv  format_instance_name.R  ilp2.csv  latex.R  lp2.csv  main.tex  ub_l2_i.csv  ub_l2_i_ff.csv  ub_l2_v.csv  ub_l2_v_ff.csv  ub_l2_v_ffr.csv  weighted.csv
cmake/: FindBitscan.cmake  FindCPLEX.cmake
data/: README.md
exp/: .gitignore  C15-CFL.py  C15-CFS-mcqdw-600-compare.py  C15-CFS.py  C15-CFS600.csv  C15-insidrug.py  C15-insidrugkpc.py  C15-mcqdw.py  C15-mcqdw_combo600.csv  CFS.py  R15-CFS600.csv  R15-rlx_ub600.csv  README.md  SC-CFS600.csv  SR-CFS600.csv  SR-rlx_ub600.csv  benchmark.csv  benchmark6.csv  benchmark60.csv  benchmark_combo_cum60.csv  benchmark_combo_ub60.csv  benchmark_mcqdw6.csv  benchmark_mcqdw60.csv  benchmark_rlx_ub60.csv  combo_test_lb.csv  combo_test_lbub.csv  combo_test_ub.csv  compare.R  data.R  exp.py  merge.R  plot_hl-C1.py  results.R  results_benchmark.csv  run.py  test.csv
exp/Table11/: C1-CFS600.csv  C1-rlx600.csv  C1-rlx_mt600.csv  C10-CFS600.csv  C10-rlx600.csv  C10-rlx_mt600.csv  C3-CFS600.csv  C3-rlx600.csv  C3-rlx_mt600.csv  Coniglio-Table11.tsv  Makefile  format.R  latex.R  maketable.py  table.tex  table11.csv
exp/Table5/: .gitignore  Makefile  data.csv  format.R  latex.R  main.tex  table.tex  table5.R  table5.csv
exp/benchmark_results/: benchmark_combo6.csv  benchmark_combo_ub6.csv  benchmark_rlx_ub6.csv
exp/old_scripts/: C15-CFS-mcqdw-600-compare.py  C15-CFS.py  C15-mcqdw.py  exp-C1.py  plot.py
exp/results/: C15-insidrug600.csv  C15-mcqdw600.csv  results-C15-CFS10.csv  results-C15-CFS60.csv  results-C15-insidrug10.csv  results-C15-insidrug60.csv  results-C15-insidrugkpc60.csv  results_hl-C1.csv
src/: bb.cpp  cplex_ilp2.cpp  cplex_kpc.cpp  cplex_lp1.cpp  cplex_lp2.cpp  cplex_mwis.cpp  heuristic.cpp  heuristic.hpp  instance.cpp  instance.hpp  kcp.cpp  kpc.cpp  kpc.hpp  kpc_dp.cpp  kpc_dp.hpp  kpc_dp2.cpp  kpc_dp2.hpp  logging.cpp  logging.hpp  model.cpp  model.hpp  run_hl.cpp  solution.cpp  solution.hpp  timer.cpp  timer.hpp  ubl2.cpp  utils.cpp  utils.hpp
